--- a/index.html
+++ b/index.html
@@ -23,6 +23,13 @@
 
     <div class="background"></div>
     <div id="cursor-halo"></div>
+        <!-- Go Top Button -->
+
+    <div class="go-top-container">
+        <div class="go-top-button">
+            <i class='bx bx-chevron-up'></i>
+        </div>
+    </div>
     <!-- Header Design -->
     <header class="header">
         <i class="bx bx-menu" id="menu-icon"></i>
@@ -74,13 +81,7 @@
             <div class="scroll-down"></div>
         </a>
 
-        <!-- Go Top Button -->
 
-        <div class="go-top-container">
-            <div class="go-top-button">
-                <i class='bx bx-chevron-up'></i>
-            </div>
-        </div>
 
     </section>
 
@@ -251,7 +252,7 @@
 
     <section class="portfolio" id="portfolio">
 
-        <h2 class="portfolio-title" data-section="portfolio" data-value="some">Mis proyectos</h2>
+        <h2 class="portfolio-title">Mis proyectos</h2>
         <span class="linea"></span>
         <p class="portfolio-intro">En esta sección vas a encontrar una selección de mis proyectos más destacados. Cada uno refleja mi forma de trabajar: atención al detalle, diseño funcional y enfoque en la experiencia del usuario. Me gusta combinar creatividad y técnica para convertir ideas en soluciones visuales y digitales que realmente funcionan.</p>
         <div class="project-container">
@@ -306,8 +307,7 @@
             </div>
             <div class="project-info-container">
                 <h2 class="info-title">A&C Seguros</h2>
-                <p class="info-description">Pagina web realizada para una PYME que se dedica al rubro del seguro
-                    patrimonial.</p>
+                <p class="info-description">Pagina web realizada para una PYME que se dedica al rubro del seguro patrimonial.</p>
                 <div class="project-links">
                     <a href="#home"><img class="hvr-bounce-in" src="./images/github.png" alt=""></a>
                     <a href="#home"><img class="hvr-bounce-in" src="./images/link.png" alt=""></a>
@@ -348,8 +348,7 @@
             </div>
             <div class="project-info-container">
                 <h2 class="info-title">Nutrición Nutricalu</h2>
-                <p class="info-description">Proyecto web realizado para una nutricionista, con varios cambios
-                    propuestos a futuro, esta es una primera version del sitio.</p>
+                <p class="info-description">Proyecto web realizado para una nutricionista, con varios cambios propuestos a futuro, esta es una primera version del sitio.</p>
                 <div class="project-links">
                     <a href="#home"><img class="hvr-bounce-in" src="./images/github.png" alt=""></a>
                     <a href="#home"><img class="hvr-bounce-in" src="./images/link.png" alt=""></a>
@@ -386,9 +385,7 @@
             </div>
             <div class="project-info-container">
                 <h2 class="info-title">Proyecto Final UTN</h2>
-                <p class="info-description">Proyecto realizado como trabajo final para la materia Laboratorio III,
-                    de la Tecnicatura Universitaria en Programación [UTN]. La misma fue desarrollada íntegramente de
-                    manera individual.</p>
+                <p class="info-description">Proyecto realizado como trabajo final para la materia Laboratorio III, de la Tecnicatura Universitaria en Programación [UTN]. La misma fue desarrollada íntegramente de manera individual.</p>
                 <div class="project-links">
                     <a href="#home"><img class="hvr-bounce-in" src="./images/github.png" alt=""></a>
                     <a href="#home"><img class="hvr-bounce-in" src="./images/link.png" alt=""></a>
@@ -429,8 +426,7 @@
             </div>
             <div class="project-info-container">
                 <h2 class="info-title">Orientacion Informatica</h2>
-                <p class="info-description">Página desarrollada para el colegio donde actualmente trabajo como
-                    docente, dando clases de programación web, estructurada y orientada a objetos.</p>
+                <p class="info-description">Página desarrollada para el colegio donde actualmente trabajo como docente, dando clases de programación web, estructurada y orientada a objetos.</p>
                 <div class="project-links">
                     <a href="#home"><img class="hvr-bounce-in" src="./images/github.png" alt=""></a>
                     <a href="#home"><img class="hvr-bounce-in" src="./images/link.png" alt=""></a>
