--- a/index.html
+++ b/index.html
@@ -252,9 +252,9 @@
 
     <section class="portfolio" id="portfolio">
 
-        <h2 class="portfolio-title">Mis proyectos</h2>
+        <h2 class="portfolio-title" data-section="portfolio" data-value="title">Mis proyectos</h2>
         <span class="linea"></span>
-        <p class="portfolio-intro">En esta sección vas a encontrar una selección de mis proyectos más destacados. Cada uno refleja mi forma de trabajar: atención al detalle, diseño funcional y enfoque en la experiencia del usuario. Me gusta combinar creatividad y técnica para convertir ideas en soluciones visuales y digitales que realmente funcionan.</p>
+        <p class="portfolio-intro" data-section="portfolio" data-value="intro">En esta sección vas a encontrar una selección de mis proyectos más destacados. Cada uno refleja mi forma de trabajar: atención al detalle, diseño funcional y enfoque en la experiencia del usuario. Me gusta combinar creatividad y técnica para convertir ideas en soluciones visuales y digitales que realmente funcionan.</p>
         <div class="project-container">
             <div class="project-img-cont">
                 <img src="./images/note.png" alt="" class="note-frame">
@@ -268,8 +268,8 @@
                 </div>
             </div>
             <div class="project-info-container">
-                <h2 class="info-title">Mi portfolio</h2>
-                <p class="info-description">Mi portfolio es una colección de proyectos web desarrollados con HTML, CSS y JavaScript, donde muestro mi habilidad para crear sitios web atractivos y funcionales. Cada proyecto exhibe un enfoque único y creativo, demostrando mi capacidad para diseñar y programar experiencias digitales cautivadoras.</p>
+                <h2 class="info-title" data-section="portfolio" data-value="project1" data-key="title">Mi portfolio</h2>
+                <p class="info-description" data-section="portfolio" data-value="project1" data-key="description">Mi portfolio es una colección de proyectos web desarrollados con HTML, CSS y JavaScript, donde muestro mi habilidad para crear sitios web atractivos y funcionales. Cada proyecto exhibe un enfoque único y creativo, demostrando mi capacidad para diseñar y programar experiencias digitales cautivadoras.</p>
                 <div class="project-links">
                     <a href="#home"><img class="hvr-bounce-in" src="./images/github.png" alt=""></a>
                     <a href="#home"><img class="hvr-bounce-in" src="./images/link.png" alt=""></a>
@@ -306,8 +306,8 @@
                 </div>
             </div>
             <div class="project-info-container">
-                <h2 class="info-title">A&C Seguros</h2>
-                <p class="info-description">Pagina web realizada para una PYME que se dedica al rubro del seguro patrimonial.</p>
+                <h2 class="info-title" data-section="portfolio" data-value="project2" data-key="title">A&C Seguros</h2>
+                <p class="info-description" data-section="portfolio" data-value="project2" data-key="description">Pagina web realizada para una PYME que se dedica al rubro del seguro patrimonial.</p>
                 <div class="project-links">
                     <a href="#home"><img class="hvr-bounce-in" src="./images/github.png" alt=""></a>
                     <a href="#home"><img class="hvr-bounce-in" src="./images/link.png" alt=""></a>
@@ -347,8 +347,8 @@
                 </div>
             </div>
             <div class="project-info-container">
-                <h2 class="info-title">Nutrición Nutricalu</h2>
-                <p class="info-description">Proyecto web realizado para una nutricionista, con varios cambios propuestos a futuro, esta es una primera version del sitio.</p>
+                <h2 class="info-title" data-section="portfolio" data-value="project3" data-key="title">Nutrición Nutricalu</h2>
+                <p class="info-description" data-section="portfolio" data-value="project3" data-key="description">Proyecto web realizado para una nutricionista, con varios cambios propuestos a futuro, esta es una primera version del sitio.</p>
                 <div class="project-links">
                     <a href="#home"><img class="hvr-bounce-in" src="./images/github.png" alt=""></a>
                     <a href="#home"><img class="hvr-bounce-in" src="./images/link.png" alt=""></a>
@@ -384,8 +384,8 @@
                 </div>
             </div>
             <div class="project-info-container">
-                <h2 class="info-title">Proyecto Final UTN</h2>
-                <p class="info-description">Proyecto realizado como trabajo final para la materia Laboratorio III, de la Tecnicatura Universitaria en Programación [UTN]. La misma fue desarrollada íntegramente de manera individual.</p>
+                <h2 class="info-title" data-section="portfolio" data-value="project4" data-key="title">Proyecto Final UTN</h2>
+                <p class="info-description" data-section="portfolio" data-value="project4" data-key="description">Proyecto realizado como trabajo final para la materia Laboratorio III, de la Tecnicatura Universitaria en Programación [UTN]. La misma fue desarrollada íntegramente de manera individual.</p>
                 <div class="project-links">
                     <a href="#home"><img class="hvr-bounce-in" src="./images/github.png" alt=""></a>
                     <a href="#home"><img class="hvr-bounce-in" src="./images/link.png" alt=""></a>
@@ -425,8 +425,8 @@
                 </div>
             </div>
             <div class="project-info-container">
-                <h2 class="info-title">Orientacion Informatica</h2>
-                <p class="info-description">Página desarrollada para el colegio donde actualmente trabajo como docente, dando clases de programación web, estructurada y orientada a objetos.</p>
+                <h2 class="info-title" data-section="portfolio" data-value="project5" data-key="title">Orientacion Informatica</h2>
+                <p class="info-description" data-section="portfolio" data-value="project5" data-key="description">Página desarrollada para el colegio donde actualmente trabajo como docente, dando clases de programación web, estructurada y orientada a objetos.</p>
                 <div class="project-links">
                     <a href="#home"><img class="hvr-bounce-in" src="./images/github.png" alt=""></a>
                     <a href="#home"><img class="hvr-bounce-in" src="./images/link.png" alt=""></a>
@@ -457,9 +457,9 @@
     <!-- Contact Section Design -->
 
     <section class="contact" id="contact">
-        <h2 class="contact-title">¿Tenés un proyecto en mente?</h2>
+        <h2 class="contact-title" data-section="contact" data-key="title">¿Tenés un proyecto en mente?</h2>
         <span class="linea"></span>
-        <p class="contact-intro">Completá el formulario y te respondo a la brevedad. Cuantos más detalles puedas dar, mejor voy a poder ayudarte y pasarte una propuesta acorde a tus necesidades. También podés escribirme directamente por <span><a href="https://wa.me/541134417767?text=Funciona esto?" target="_blank">WhatsApp</a></span> si preferís un contacto más rápido.</p>
+        <p class="contact-intro" data-section="contact" data-key="intro">Completá el formulario y te respondo a la brevedad. Cuantos más detalles puedas dar, mejor voy a poder ayudarte y pasarte una propuesta acorde a tus necesidades. También podés escribirme directamente por <span><a href="https://wa.me/541134417767?text=Funciona esto?" target="_blank">WhatsApp</a></span> si preferís un contacto más rápido.</p>
         <form action="https://api.web3forms.com/submit" method="POST">
             <div class="input-box">
                 <input type="hidden" name="access_key" value="27348487-0931-4ea6-9ada-8ad2b07f5651">
@@ -477,7 +477,7 @@
 
     <footer class="footer">
         <div class="footer-text">
-            <p>Desarrollado y programado en Visual Studio Code por mí.</p>
+            <p data-section="footer" data-key="p1">Desarrollado y programado íntegramente por mí utilizando Visual Studio Code.</p>
             <p>&copy; Leonel Cuenca 👨🏻‍💻⚡️</p>
         </div>
         <div class="menu-footer">
