error desaparecio bototm bot

--- a/index.html
+++ b/index.html
@@ -6,15 +6,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Leonel Cuenca | Frontend Dev</title>
-
     <!-- Preload de imagen crítica -->
     <link rel="preload" href="./images/background2.png" as="image" />
-
     <link rel="icon" type="image/png" href="/images/favico.png">
-
     <!-- Boxicons local -->
     <link rel="stylesheet" href="./css/boxicons.min.css" />
-
     <!-- TU CSS general (idealmente minificado y unificado) -->
     <link rel="stylesheet" href="css/style.css" />
 </head>
@@ -23,6 +19,7 @@
 
     <div class="background"></div>
     <div id="cursor-halo"></div>
+
         <!-- Go Top Button -->
 
     <div class="go-top-container">
@@ -30,7 +27,9 @@
             <i class='bx bx-chevron-up'></i>
         </div>
     </div>
+
     <!-- Header Design -->
+
     <header class="header">
         <i class="bx bx-menu" id="menu-icon"></i>
         <nav class="navbar">
@@ -80,9 +79,6 @@
         <a class="link-test" href="#about">
             <div class="scroll-down"></div>
         </a>
-
-
-
     </section>
 
     <!-- About Section Design -->
@@ -169,7 +165,7 @@
                         <li class="item" data-section="services" data-value="card1" data-key="li4">✔ Integración con redes sociales o WhatsApp</li>
                         <li class="item" data-section="services" data-value="card1" data-key="li5">✔ Hosting y dominio opcionales</li>
                     </ul>
-                    <p class="back-info" data-section="services" data-value="card1" data-key="p3">💰 Desde USD 150</p>
+                    <p class="back-info" data-section="services" data-value="card1" data-key="p3">💰 Desde USD 100</p>
                     <p class="back-info" data-section="services" data-value="card1" data-key="p4">¿Querés una landing para tu negocio?</p>
                     <p class="back-info" data-section="services" data-value="card1" data-key="p5">¿Tenes alguna duda?</p>
                     <a href="https://wa.me/541134417767?text=Estoy interesado en consultar por una landing page, " target="_blank" class="btn card-button" data-section="services" data-value="card1" data-key="btn">Hablemos por WhatsApp</a>
@@ -185,7 +181,7 @@
                     <p class="back-info" data-section="services" data-value="card2" data-key="p1">Un sitio institucional es la carta de presentación digital de tu marca o emprendimiento.</p>
                     <p class="back-info" data-section="services" data-value="card2" data-key="p2">Diseño sitios modernos, claros y totalmente adaptables, pensados para reflejar tu identidad profesional, transmitir confianza y destacar lo mejor de tu propuesta.</p>
                     <p class="back-info" data-section="services" data-value="card2" data-key="p3">Cada proyecto incluye un diseño personalizado (sin plantillas prediseñadas), optimización SEO básica, formularios funcionales y asistencia con dominio y hosting para dejar tu sitio 100% online, visible y listo para crecer.</p>
-                    <p class="back-info" data-section="services" data-value="card2" data-key="p4">💰 Desde USD 250</p>
+                    <p class="back-info" data-section="services" data-value="card2" data-key="p4">💰 Desde USD 200</p>
                     <p class="back-info" data-section="services" data-value="card2" data-key="p5">¿Querés mejorar la presencia digital de tu marca?</p>
                     <p class="back-info" data-section="services" data-value="card2" data-key="p6">Escribime y te asesoro sin compromiso</p>
                     <a href="https://wa.me/541134417767?text=" target="_blank" class="btn card-button" data-section="services" data-value="card2" data-key="btn">Hablemos por WhatsApp</a>
@@ -328,7 +324,6 @@
                         <img class="skill-img" src="./images/js.png" alt="">
                         JavaScript
                     </div>
-
                 </div>
             </div>
         </div>
@@ -459,7 +454,7 @@
     <section class="contact" id="contact">
         <h2 class="contact-title" data-section="contact" data-key="title">¿Tenés un proyecto en mente?</h2>
         <span class="linea"></span>
-        <p class="contact-intro" data-section="contact" data-key="intro">Completá el formulario y te respondo a la brevedad. Cuantos más detalles puedas dar, mejor voy a poder ayudarte y pasarte una propuesta acorde a tus necesidades. También podés escribirme directamente por <span><a href="https://wa.me/541134417767?text=Funciona esto?" target="_blank">WhatsApp</a></span> si preferís un contacto más rápido.</p>
+        <p class="contact-intro"><span data-section="contact" data-key="intro1">Completá el formulario y te respondo a la brevedad. Cuantos más detalles puedas dar, mejor voy a poder ayudarte y pasarte una propuesta acorde a tus necesidades. También podés escribirme directamente por </span><span class="wsp-link"><a href="https://wa.me/541134417767?text=Funciona esto?" target="_blank">WhatsApp</a></span><span data-section="contact" data-key="intro2">si preferís un contacto más rápido.</span></p>
         <form action="https://api.web3forms.com/submit" method="POST">
             <div class="input-box">
                 <input type="hidden" name="access_key" value="27348487-0931-4ea6-9ada-8ad2b07f5651">
