--- a/index.html
+++ b/index.html
@@ -54,19 +54,19 @@
     <section class="home" id="home">
         <div class="social-bar">
             <a href="#" target="_blank" class="">
-                <img src="./images/gh.png" alt="">
+                <img src="./images/gh.png" alt="GitHub">
             </a>
             <a href="#" target="_blank" class="">
-                <img src="./images/linkedin.png">
+                <img src="./images/linkedin.png" alt="Linkedin">
             </a>
             <a href="#" target="_blank" class="">
-                <img src="./images/spotify.png" alt="">
+                <img src="./images/spotify.png" alt="Spotify">
             </a>
             <a href="#" target="_blank" class="">
-                <img src="./images/ig.png" alt="">
+                <img src="./images/ig.png" alt="Instagram">
             </a>
             <a href="#" target="_blank" class="">
-                <img src="./images/wsp.png" alt="">
+                <img src="./images/wsp.png" alt="WhatsApp">
             </a>
         </div>
 
@@ -253,13 +253,13 @@
         <p class="portfolio-intro" data-section="portfolio" data-value="intro">En esta sección vas a encontrar una selección de mis proyectos más destacados. Cada uno refleja mi forma de trabajar: atención al detalle, diseño funcional y enfoque en la experiencia del usuario. Me gusta combinar creatividad y técnica para convertir ideas en soluciones visuales y digitales que realmente funcionan.</p>
         <div class="project-container">
             <div class="project-img-cont">
-                <img src="./images/note.png" alt="" class="note-frame">
+                <img src="./images/note.png" alt="Proyectos" class="note-frame">
                 <div class="screen">
                     <div class="slider">
-                        <img src="./images/portfolio-home.png" alt="" class="slide">
-                        <img src="./images/portfolio-about.png" alt="" class="slide">
-                        <img src="./images/portfolio-projects.png" alt="" class="slide">
-                        <img src="./images/portfolio-contact.png" alt="" class="slide">
+                        <img src="./images/portfolio-home.png" alt="Portfolio Home" class="slide">
+                        <img src="./images/portfolio-about.png" alt="Portfolio About" class="slide">
+                        <img src="./images/portfolio-projects.png" alt="Portfolio Projects" class="slide">
+                        <img src="./images/portfolio-contact.png" alt="Portfolio Contact" class="slide">
                     </div>
                 </div>
             </div>
@@ -291,13 +291,13 @@
 
         <div class="project-container">
             <div class="project-img-cont">
-                <img src="./images/note.png" alt="" class="note-frame">
+                <img src="./images/note.png" alt="Proyectos" class="note-frame">
                 <div class="screen">
                     <div class="slider">
-                        <img src="./images/seguros1.png" alt="" class="slide">
-                        <img src="./images/seguros2.png" alt="" class="slide">
-                        <img src="./images/seguros3.png" alt="" class="slide">
-                        <img src="./images/seguros4.png" alt="" class="slide">
+                        <img src="./images/seguros1.png" alt="Seguros 1" class="slide">
+                        <img src="./images/seguros2.png" alt="Seguros 2" class="slide">
+                        <img src="./images/seguros3.png" alt="Seguros 3" class="slide">
+                        <img src="./images/seguros4.png" alt="Seguros 4" class="slide">
                     </div>
                 </div>
             </div>
@@ -330,14 +330,14 @@
 
         <div class="project-container">
             <div class="project-img-cont">
-                <img src="./images/note.png" alt="" class="note-frame">
+                <img src="./images/note.png" alt="Proyectos" class="note-frame">
                 <div class="screen">
                     <div class="slider">
-                        <img src="./images/nutricion1.png" alt="" class="slide">
-                        <img src="./images/nutricion2.png" alt="" class="slide">
-                        <img src="./images/nutricion3.png" alt="" class="slide">
-                        <img src="./images/nutricion4.png" alt="" class="slide">
-                        <img src="./images/nutricion5.png" alt="" class="slide">
+                        <img src="./images/nutricion1.png" alt="Nutrición 1" class="slide">
+                        <img src="./images/nutricion2.png" alt="Nutrición 2" class="slide">
+                        <img src="./images/nutricion3.png" alt="Nutrición 3" class="slide">
+                        <img src="./images/nutricion4.png" alt="Nutrición 4" class="slide">
+                        <img src="./images/nutricion5.png" alt="Nutrición 5" class="slide">
                     </div>
                 </div>
             </div>
@@ -367,14 +367,14 @@
 
         <div class="project-container">
             <div class="project-img-cont">
-                <img src="./images/note.png" alt="" class="note-frame">
+                <img src="./images/note.png" alt="Proyectos" class="note-frame">
                 <div class="screen">
                     <div class="slider">
-                        <img src="./images/utn1.png" alt="" class="slide">
-                        <img src="./images/utn2.png" alt="" class="slide">
-                        <img src="./images/utn3.png" alt="" class="slide">
-                        <img src="./images/utn4.png" alt="" class="slide">
-                        <img src="./images/utn5.png" alt="" class="slide">
+                        <img src="./images/utn1.png" alt="UTN 1" class="slide">
+                        <img src="./images/utn2.png" alt="UTN 2" class="slide">
+                        <img src="./images/utn3.png" alt="UTN 3" class="slide">
+                        <img src="./images/utn4.png" alt="UTN 4" class="slide">
+                        <img src="./images/utn5.png" alt="UTN 5" class="slide">
                     </div>
                 </div>
             </div>
@@ -408,14 +408,14 @@
 
         <div class="project-container">
             <div class="project-img-cont">
-                <img src="./images/note.png" alt="" class="note-frame">
+                <img src="./images/note.png" alt="Proyectos" class="note-frame">
                 <div class="screen">
                     <div class="slider">
-                        <img src="./images/cfp1.png" alt="" class="slide">
-                        <img src="./images/cfp2.png" alt="" class="slide">
-                        <img src="./images/cfp3.png" alt="" class="slide">
-                        <img src="./images/cfp4.png" alt="" class="slide">
-                        <img src="./images/cfp5.png" alt="" class="slide">
+                        <img src="./images/cfp1.png" alt="CFP 1" class="slide">
+                        <img src="./images/cfp2.png" alt="CFP 2" class="slide">
+                        <img src="./images/cfp3.png" alt="CFP 3" class="slide">
+                        <img src="./images/cfp4.png" alt="CFP 4" class="slide">
+                        <img src="./images/cfp5.png" alt="CFP 5" class="slide">
                     </div>
                 </div>
             </div>
@@ -477,19 +477,19 @@
         </div>
         <div class="menu-footer">
             <a href="#" target="_blank" class="">
-                <img src="./images/gh.png" alt="">
+                <img src="./images/gh.png" alt="GitHub">
             </a>
             <a href="#" target="_blank" class="">
-                <img src="./images/linkedin.png">
+                <img src="./images/linkedin.png" alt="LinkedIn">
             </a>
             <a href="#" target="_blank" class="">
-                <img src="./images/spotify.png" alt="">
+                <img src="./images/spotify.png" alt="Spotify">
             </a>
             <a href="#" target="_blank" class="">
-                <img src="./images/ig.png" alt="">
+                <img src="./images/ig.png" alt="Instagram">
             </a>
             <a href="#" target="_blank" class="">
-                <img src="./images/wsp.png" alt="">
+                <img src="./images/wsp.png" alt="WhatsApp">
             </a>
         </div>
     </footer>
